# cpp-python-opencv-socket-communication

./: .gitignore  README.md
cpp-source/: CMakeLists.txt  client_comm.h  socket_client.cpp
python-source/: socket_daemon.py
